kubernetes/deploy/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: zero-back-alex-test
  annotations:
    # nginx ingress
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    # cert-manager
    ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: clusterissuer-letsencrypt-production
    # CORS
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "zero-back-alex-test.spa.onboarding.dev"

spec:
  rules:
  - host: zero-back-alex-test-api.onboarding.dev
    http:
      paths:
        - path: /(.*)
          backend:
            serviceName: zero-back-alex-test
            servicePort: http
  tls:
  - hosts:
    - zero-back-alex-test-api.onboarding.dev
    secretName: zero-back-alex-test-tls-secret
